@@ -1,6 +1,6 @@
 /* Multi-process control for GDB, the GNU debugger.
 
-   Copyright (C) 2008-2012 Free Software Foundation, Inc.
+   Copyright (C) 2008, 2009, 2010 Free Software Foundation, Inc.
 
    This file is part of GDB.
 
@@ -30,8 +30,6 @@
 #include "gdbcore.h"
 #include "symfile.h"
 #include "environ.h"
-#include "cli/cli-utils.h"
-#include "continuations.h"
 
 void _initialize_inferiors (void);
 
@@ -126,7 +124,7 @@ add_inferior_silent (int pid)
   memset (inf, 0, sizeof (*inf));
   inf->pid = pid;
 
-  inf->control.stop_soon = NO_STOP_QUIETLY;
+  inf->stop_soon = NO_STOP_QUIETLY;
 
   inf->num = ++highest_inferior_num;
   inf->next = inferior_list;
@@ -276,15 +274,11 @@ exit_inferior_1 (struct inferior *inftoex, int silent)
   observer_notify_inferior_exit (inf);
 
   inf->pid = 0;
-  inf->fake_pid_p = 0;
   if (inf->vfork_parent != NULL)
     {
       inf->vfork_parent->vfork_child = NULL;
       inf->vfork_parent = NULL;
     }
-
-  inf->has_exit_code = 0;
-  inf->exit_code = 0;
 }
 
 void
@@ -467,19 +461,16 @@ have_inferiors (void)
 int
 have_live_inferiors (void)
 {
-  struct inferior *inf;
+  struct target_ops *t;
 
-  for (inf = inferior_list; inf; inf = inf->next)
-    if (inf->pid != 0)
-      {
-	struct thread_info *tp;
-	
-	tp = any_thread_of_process (inf->pid);
-	if (tp && target_has_execution_1 (tp->ptid))
-	  break;
-      }
+  /* The check on stratum suffices, as GDB doesn't currently support
+     multiple target interfaces.  */
+  if (have_inferiors ())
+    for (t = current_target.beneath; t != NULL; t = t->beneath)
+      if (t->to_stratum == process_stratum)
+	return 1;
 
-  return inf != NULL;
+  return 0;
 }
 
 /* Prune away automatically added program spaces that aren't required
@@ -529,12 +520,10 @@ number_of_inferiors (void)
 /* Prints the list of inferiors and their details on UIOUT.  This is a
    version of 'info_inferior_command' suitable for use from MI.
 
-   If REQUESTED_INFERIORS is not NULL, it's a list of GDB ids of the
-   inferiors that should be printed.  Otherwise, all inferiors are
-   printed.  */
-
-static void
-print_inferior (struct ui_out *uiout, char *requested_inferiors)
+   If REQUESTED_INFERIOR is not -1, it's the GDB id of the inferior that
+   should be printed.  Otherwise, all inferiors are printed.  */
+void
+print_inferior (struct ui_out *uiout, int requested_inferior)
 {
   struct inferior *inf;
   struct cleanup *old_chain;
@@ -543,7 +532,7 @@ print_inferior (struct ui_out *uiout, char *requested_inferiors)
   /* Compute number of inferiors we will print.  */
   for (inf = inferior_list; inf; inf = inf->next)
     {
-      if (!number_is_in_list (requested_inferiors, inf->num))
+      if (requested_inferior != -1 && inf->num != requested_inferior)
 	continue;
 
       ++inf_count;
@@ -567,7 +556,7 @@ print_inferior (struct ui_out *uiout, char *requested_inferiors)
     {
       struct cleanup *chain2;
 
-      if (!number_is_in_list (requested_inferiors, inf->num))
+      if (requested_inferior != -1 && inf->num != requested_inferior)
 	continue;
 
       chain2 = make_cleanup_ui_out_tuple_begin_end (uiout, NULL);
@@ -617,35 +606,24 @@ detach_inferior_command (char *args, int from_tty)
 {
   int num, pid;
   struct thread_info *tp;
-  struct get_number_or_range_state state;
 
   if (!args || !*args)
-    error (_("Requires argument (inferior id(s) to detach)"));
+    error (_("Requires argument (inferior id to detach)"));
 
-  init_number_or_range (&state, args);
-  while (!state.finished)
-    {
-      num = get_number_or_range (&state);
+  num = parse_and_eval_long (args);
 
-      if (!valid_gdb_inferior_id (num))
-	{
-	  warning (_("Inferior ID %d not known."), num);
-	  continue;
-	}
+  if (!valid_gdb_inferior_id (num))
+    error (_("Inferior ID %d not known."), num);
 
-      pid = gdb_inferior_id_to_pid (num);
+  pid = gdb_inferior_id_to_pid (num);
 
-      tp = any_thread_of_process (pid);
-      if (!tp)
-	{
-	  warning (_("Inferior ID %d has no threads."), num);
-	  continue;
-	}
+  tp = any_thread_of_process (pid);
+  if (!tp)
+    error (_("Inferior has no threads."));
 
-      switch_to_thread (tp->ptid);
+  switch_to_thread (tp->ptid);
 
-      detach_command (NULL, from_tty);
-    }
+  detach_command (NULL, from_tty);
 }
 
 static void
@@ -653,35 +631,24 @@ kill_inferior_command (char *args, int from_tty)
 {
   int num, pid;
   struct thread_info *tp;
-  struct get_number_or_range_state state;
 
   if (!args || !*args)
-    error (_("Requires argument (inferior id(s) to kill)"));
+    error (_("Requires argument (inferior id to kill)"));
 
-  init_number_or_range (&state, args);
-  while (!state.finished)
-    {
-      num = get_number_or_range (&state);
+  num = parse_and_eval_long (args);
 
-      if (!valid_gdb_inferior_id (num))
-	{
-	  warning (_("Inferior ID %d not known."), num);
-	  continue;
-	}
+  if (!valid_gdb_inferior_id (num))
+    error (_("Inferior ID %d not known."), num);
 
-      pid = gdb_inferior_id_to_pid (num);
+  pid = gdb_inferior_id_to_pid (num);
 
-      tp = any_thread_of_process (pid);
-      if (!tp)
-	{
-	  warning (_("Inferior ID %d has no threads."), num);
-	  continue;
-	}
+  tp = any_thread_of_process (pid);
+  if (!tp)
+    error (_("Inferior has no threads."));
 
-      switch_to_thread (tp->ptid);
+  switch_to_thread (tp->ptid);
 
-      target_kill ();
-    }
+  target_kill ();
 
   bfd_cache_close_all ();
 }
@@ -733,10 +700,10 @@ inferior_command (char *args, int from_tty)
     }
 
   if (inf->pid != 0 && is_running (inferior_ptid))
-    ui_out_text (current_uiout, "(running)\n");
+    ui_out_text (uiout, "(running)\n");
   else if (inf->pid != 0)
     {
-      ui_out_text (current_uiout, "\n");
+      ui_out_text (uiout, "\n");
       print_stack_frame (get_selected_frame (NULL), 1, SRC_AND_LOC);
     }
 }
@@ -746,7 +713,16 @@ inferior_command (char *args, int from_tty)
 static void
 info_inferiors_command (char *args, int from_tty)
 {
-  print_inferior (current_uiout, args);
+  int requested = -1;
+
+  if (args && *args)
+    {
+      requested = parse_and_eval_long (args);
+      if (!valid_gdb_inferior_id (requested))
+	error (_("Inferior ID %d not known."), requested);
+    }
+
+  print_inferior (uiout, requested);
 }
 
 /* remove-inferior ID */
@@ -756,37 +732,20 @@ remove_inferior_command (char *args, int from_tty)
 {
   int num;
   struct inferior *inf;
-  struct get_number_or_range_state state;
 
-  if (args == NULL || *args == '\0')
-    error (_("Requires an argument (inferior id(s) to remove)"));
+  num = parse_and_eval_long (args);
+  inf = find_inferior_id (num);
 
-  init_number_or_range (&state, args);
-  while (!state.finished)
-    {
-      num = get_number_or_range (&state);
-      inf = find_inferior_id (num);
+  if (inf == NULL)
+    error (_("Inferior ID %d not known."), num);
 
-      if (inf == NULL)
-	{
-	  warning (_("Inferior ID %d not known."), num);
-	  continue;
-	}
-
-      if (inf == current_inferior ())
-	{
-	  warning (_("Can not remove current symbol inferior %d."), num);
-	  continue;
-	}
+  if (inf == current_inferior ())
+    error (_("Can not remove current symbol inferior."));
     
-      if (inf->pid != 0)
-	{
-	  warning (_("Can not remove active inferior %d."), num);
-	  continue;
-	}
+  if (inf->pid != 0)
+    error (_("Can not remove an active inferior."));
 
-      delete_inferior_1 (inf, 1);
-    }
+  delete_inferior_1 (inf, 1);
 }
 
 struct inferior *
@@ -858,7 +817,7 @@ add_inferior_command (char *args, int from_tty)
       if (exec != NULL)
 	{
 	  /* Switch over temporarily, while reading executable and
-	     symbols.q.  */
+	     symbols.q  */
 	  set_current_program_space (inf->pspace);
 	  set_current_inferior (inf);
 	  switch_to_thread (null_ptid);
@@ -1076,19 +1035,19 @@ initialize_inferiors (void)
   current_inferior_->pspace = current_program_space;
   current_inferior_->aspace = current_program_space->aspace;
 
-  add_info ("inferiors", info_inferiors_command, 
-	    _("IDs of specified inferiors (all inferiors if no argument)."));
+  add_info ("inferiors", info_inferiors_command,
+	    _("IDs of currently known inferiors."));
 
   add_com ("add-inferior", no_class, add_inferior_command, _("\
 Add a new inferior.\n\
 Usage: add-inferior [-copies <N>] [-exec <FILENAME>]\n\
-N is the optional number of inferiors to add, default is 1.\n\
+N is the optional number of inferior to add, default is 1.\n\
 FILENAME is the file name of the executable to use\n\
 as main program."));
 
-  add_com ("remove-inferiors", no_class, remove_inferior_command, _("\
-Remove inferior ID (or list of IDs).\n\
-Usage: remove-inferiors ID..."));
+  add_com ("remove-inferior", no_class, remove_inferior_command, _("\
+Remove inferior ID.\n\
+Usage: remove-inferior ID"));
 
   add_com ("clone-inferior", no_class, clone_inferior_command, _("\
 Clone inferior ID.\n\
@@ -1098,12 +1057,12 @@ executable loaded as the copied inferior.  If -copies is not specified,\n\
 adds 1 copy.  If ID is not specified, it is the current inferior\n\
 that is cloned."));
 
-  add_cmd ("inferiors", class_run, detach_inferior_command, _("\
-Detach from inferior ID (or list of IDS)."),
+  add_cmd ("inferior", class_run, detach_inferior_command, _("\
+Detach from inferior ID."),
 	   &detachlist);
 
-  add_cmd ("inferiors", class_run, kill_inferior_command, _("\
-Kill inferior ID (or list of IDs)."),
+  add_cmd ("inferior", class_run, kill_inferior_command, _("\
+Kill inferior ID."),
 	   &killlist);
 
   add_cmd ("inferior", class_run, inferior_command, _("\
